# buttplug-js

./: .eslintrc  .eslintrc.js  .gitignore  .jshintrc  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _redirects  azure-pipelines.yml  buttplug-device-config.yml  hierarchy.html  index.html  index.js  lerna.json  modules.html  node-test.ts  package-lock.json  package.json  tsconfig.json  tsfmt.json  tslint.json  typedocconfig.js  vite.config.ts  webpack.config.js
.github/workflows/: docs.yaml
assets/: navigation.js  search.js
buttplug/: .gitignore  .npmignore  package.json  typedoc.js
buttplug/src/: index.ts
buttplug/tests/: test-client.ts  test-messageutils.ts  test-websocketclient.ts  utils.ts
classes/: ButtplugBrowserWebsocketClientConnector.html  ButtplugClient.html  ButtplugClientConnectorException.html  ButtplugClientDevice.html  ButtplugDeviceError.html  ButtplugDeviceMessage.html  ButtplugError.html  ButtplugInitError.html  ButtplugLogger.html  ButtplugMessage.html  ButtplugMessageError.html  ButtplugMessageSorter.html  ButtplugNodeWebsocketClientConnector.html  ButtplugPingError.html  ButtplugSystemMessage.html  ButtplugUnknownError.html  DeviceAdded.html  DeviceInfo.html  DeviceList.html  DeviceRemoved.html  Error.html  GenericDeviceMessageAttributes.html  GenericMessageSubcommand.html  LinearCmd.html  LogMessage.html  MessageAttributes.html  Ok.html  Ping.html  RawDeviceMessageAttributes.html  RawReadCmd.html  RawReading.html  RawSubscribeCmd.html  RawUnsubscribeCmd.html  RawWriteCmd.html  RequestDeviceList.html  RequestServerInfo.html  RotateCmd.html  RotateSubcommand.html  ScalarCmd.html  ScalarSubcommand.html  (+10 more)
dist-bundle/: bundle.js  bundle.js.map
dist-bundle/example/: example.html  example.js  example.js.map
enums/: ActuatorType.html  ButtplugLogLevel.html  ErrorClass.html  SensorType.html
example/: index.html  index.js  index.ts  script.js  server.ts
examples/: async-example.ts  device-control-example.ts  device-info-example.ts  remote-connector-example.ts  tsconfig.json
examples/node/: application-example.ts  errors-example.ts  package-lock.json  package.json
examples/web/: device-enumeration-example.js  errors-example.js  logging.js
functions/: FromJSON.html  fromJSON.html  getMessageClassFromMessage.html
interfaces/: IButtplugClientConnector.html
js/: .eslintrc.js  .npmignore  .prettierrc.json  CHANGELOG.md  README.md  jest-puppeteer.config.js  node-test.ts  package-lock.json  package.json  rollup.config.js  tsup.config.ts  vite.config.ts
js/src/: index.ts
js/tests/: test-conformance.ts  test-logging.ts  test-messages.ts  test-messageutils.ts  test-websocketclient.ts
js/util/: convert_device_config.js
js/web-tests/: web-test.html
schema/: buttplug-schema.json
src/: index.ts
src/client/: BrowserClient.ts  ButtplugBrowserConnector.ts  ButtplugBrowserServerConnector.ts  ButtplugBrowserWebsocketClientConnector.ts  ButtplugBrowserWebsocketConnector.ts  Client.ts  (+12 more)
tests/: client.ts  logging.ts  messages.ts  server.ts  test-bluetoothdevices.ts  test-client.ts  test-devtools.ts  test-logging.ts  test-messages.ts  test-messageutils.ts  test-server.ts  test-webbluetooth.ts  test-websocketclient.ts  utils.ts  websocketclient.ts
variables/: DEFAULT_MESSAGE_ID.html  MAX_ID.html  MESSAGE_SPEC_VERSION.html  SYSTEM_MESSAGE_ID.html
wasm/: .npmignore  .pnp.cjs  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
wasm/rust/: Cargo.toml  LICENSE.md  README.md
wasm/rust/.cargo/: config.toml
wasm/rust/src/: lib.rs
wasm/rust/src/devices/: mod.rs  powerblow.rs
wasm/rust/src/webbluetooth/: mod.rs  webbluetooth_hardware.rs  webbluetooth_manager.rs
web-tests/: test-web-library.ts
(+92 files in other folders)
